--- a/V2/pom.xml
+++ b/V2/pom.xml
@@ -47,6 +47,30 @@
                     <artifactId>mysql-connector-java</artifactId>
                     <version>8.0.33</version> <!-- Cambia esto a la versión que necesites -->
                 </dependency>
+                <!--DEPENDEICAS PARA JWT-->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-security</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-api</artifactId>
+                    <version>0.11.5</version> <!-- Asegúrate de usar la versión más reciente -->
+                </dependency>
+                <dependency>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-impl</artifactId>
+                    <version>0.11.5</version> <!-- Asegúrate de usar la versión más reciente -->
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-jackson</artifactId>
+                    <version>0.11.5</version> <!-- Asegúrate de usar la versión más reciente -->
+                    <scope>runtime</scope>
+                </dependency>
+
+
 	</dependencies>
 
 	<build>
